Nice enough landing page

--- a/public/launch/index.html
+++ b/public/launch/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="http://use.typekit.net/stn4qyl.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header class="set intro site-header freight">
